add eslint and prettier config

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "tsc -p ./tsconfig.json",
     "build:web": "expo build:web",
     "clean": "rimraf ./dist ./web-build",
-    "lint": "tslint -c ./tslint.json ./src/**/*.{ts,tsx}",
+    "lint": "eslint --ext .tsx,.ts src",
     "changelog": "conventional-changelog -i ./CHANGELOG.md -s",
     "postinstall": "jetify"
   },
@@ -73,9 +73,13 @@
     "@expo/metro-config": "^0.1.54",
     "@expo/webpack-config": "~0.12.45",
     "@types/react-native": "ts4.1",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "8.3.0",
     "conventional-changelog-cli": "^2.0.21",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
     "expo-cli": "^4.1.6",
     "husky": "^1.1.2",
     "jetifier": "^1.6.5",
